--- a/Redis/src/main/resources/application.properties
+++ b/Redis/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=Redis
 redis.host=localhost
 redis.port=6379
+redis.username=default
+redis.password=zxcvbnm
+
+#For docker
+#AUTH zxcvbnm
+#docker run -d --name redis-server-local -p 6379:6379 -e REDIS_USERNAME=default -e REDIS_PASSWORD=zxcvbnm redis:alpine --requirepass zxcvbnm
