--- a/Student/pom.xml
+++ b/Student/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.3.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.student</groupId>
+	<groupId>com.staff</groupId>
 	<artifactId>Student</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Student</name>
