--- a/Student/src/main/resources/application.properties
+++ b/Student/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=true
 server.port=5000
 
   # Redis Configuration
-redis.host=localhost
-redis.port=7999
-redis.username=default
-redis.password=zxcvbnm
+#redis.host=localhost
+#redis.port=7999
+#redis.username=default
+#redis.password=zxcvbnm
