Redis configuration issue solve

--- a/Student/src/main/resources/application.properties
+++ b/Student/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Spring Cloud Config Server integration (optional integration)
+spring.config.import=optional:configserver:
+
   # Server Port
 server.port=5000
 
